<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">
    tools:context=".Login">

    <TextView
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="Enter Username here:"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/Username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:textStyle="bold"
        android:text="Enter Password here:"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Pass_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/holo_red_light"
        android:layout_centerHorizontal="true"
        android:text="login" />

    <Button
        android:id="@+id/User_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/holo_red_light"
        android:layout_centerHorizontal="true"
        android:text="Create User" />

</RelativeLayout>